[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-service = "2.0.2"
actix-web = "4.9.0"
actix-web-lab = "0.22.0"
anyhow = "1.0.86"
bcrypt = "0.15.1"
chrono = "0.4.38"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
lettre = "0.11.7"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.6"
serde = "1.0.208"
serde_json = "1.0.125"
sqlx = {version = "0.8.0", features = ["postgres", "runtime-tokio-rustls", "chrono"]}
thiserror = "1.0.63"
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["v4"] }
